<resources>
    <string name="app_name">samvel_homework_lesson_32</string>
    <string name="show_notifications">Show Notification</string>
    <string name="notification_hello">Hello and welcome to notification activity.</string>
    <string name="show_notification_1">Show Notification 1</string>
    <string name="show_notification_2">Show Notification 2</string>
    <string name="get_from_contacts">Get From Contacts</string>
    <string name="contacts_list">Contacts List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_text_1">This is the first fragment.</string>
    <string name="fragment_text_3">This is the third fragment.</string>
    <string name="fragment_text_2">This is the second fragment.</string>
    <string name="fragment_1">Star Club</string>
    <string name="fragment_2">Office</string>
    <string name="fragment_3">Game Zone</string>
    <string name="bottom_navigation_view">Bottom Navigation View</string>
    <string name="fragment_a">Fragment A</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="some_text">some text</string>
    <string name="fragment_b">Fragment B</string>
    <string name="fragments_with_viewmodel">Fragments with ViewModel</string>
    <string name="click_me">Click Me!</string>
</resources>