<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentA">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_a_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_a"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fragment_a_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_a_text"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_a_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_blue"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_a_edit_text"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_a_message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/fragment_a_submit_button"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_a_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/some_text"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/fragment_a_message_text"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_b_link_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:text="@string/fragment_b"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_a_message" />
</androidx.constraintlayout.widget.ConstraintLayout>