<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_ntf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/dark_blue"
        android:paddingHorizontal="8dp"
        android:text="@string/show_notification_1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/show_ntf_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_ntf_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:paddingHorizontal="8dp"
        android:text="@string/show_notification_2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_ntf" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contacts_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/contacts_list"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/show_ntf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="8dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bottom_navigation_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/bottom_navigation_view"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/show_ntf_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragments_with_viewmodel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/fragments_with_viewmodel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/show_ntf_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>